# SIO-Project

./: .gitignore  README.md
delivery1/: README.md  compose.prod.yaml  compose.yaml
delivery1/client/: .gitignore  helper.md  main.py  requirements.txt
delivery1/repository/: .env.example  Dockerfile  Dockerfile.prod  mypy.ini  pyproject.toml
delivery1/repository/alembic/: env.py
delivery1/repository/alembic/versions/: 773760af9856_add_document_migration.py  81aa697cd697_add_active_bool_to_subject.py  c5aef9a1a909_rename_public_key_fk_in_n_m_thing.py  f711ad4100a3_initial_migrations.py
delivery1/repository/repository/: main.py
delivery1/repository/repository/config/: database.py  settings.py
delivery1/repository/repository/crud/: base.py  document.py  organization.py  public_key.py  subject.py  subject_organization_link.py
delivery1/repository/repository/models/: __init__.py  document.py  nested_base.py  organization.py  permission.py  relations.py  roles.py  session.py  subject.py
delivery1/repository/repository/routers/: __init__.py  document.py  organization.py  repository.py  subject.py
delivery1/repository/repository/utils/: encryption.py  middleware.py  serializers.py
delivery1/repository/repository/utils/auth/: authorization_handler.py  generate_token.py
delivery1/repository/repository/utils/encryption/: encryptors.py  loaders.py
delivery2/: README.md  compose.prod.yaml  compose.yaml
delivery2/client/: claudia nayara.txt  output.enc  output.txt  requirements.txt  test-commands.md
delivery2/repository/: alembic.ini
delivery3/: README.md
(+102 files in other folders)
