[tool.poetry]
name = "repository"
version = "1.0.0"
description = "SIO Project"
authors = ["André Ribeiro", "Bruno Lopes", "Rúben Garrido", "Violeta Ramos"]

[tool.poetry.dependencies]
aiosqlite = "^0.20.0"
alembic = "^1.13.3"
email-validator = "^2.2.0"
fastapi = { extras = ["standard"], version = "^0.115.3" }
greenlet = "^3.1.1"
gunicorn = "^23.0.0"
httpx = "^0.27.2"
orjson = "^3.10.10"
pydantic = "^2.9.2"
pydantic-extra-types = "^2.9.0"
pydantic-settings = "^2.6.0"
python = "^3.13"
python-magic = "^0.4.27"
python-multipart = "^0.0.12"
sqlmodel = "^0.0.22"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
uvloop = "^0.21.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.12.1"
ruff = "^0.7.0"
sqlalchemy-stubs = "^0.4"
watchfiles = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
